package reddit_proto;

message Comment {
    required string Author = 1; // done
    required string Body = 2; // done
    optional string AuthorFlairCssClass = 16; // done
    optional string AuthorFlairText = 17; // done
    optional int32 Controversiality = 18; // done
    optional int64 CreatedUTC = 6; // done
    optional string Edited = 7;
    optional int32 Gilded = 19;
    required string Id = 9;
    optional string LinkId = 22;
    optional string ParentId = 20;
    optional int64 RetrievedOn = 23;
    required int32 Score = 13;
    required string Subreddit = 14;
    required string SubredditId = 15;
    optional int32 Ups = 21;

  }
